Bug #3403 Wrong encoding in EXPLAIN SELECT output